--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
     background-color: black;
     margin-bottom: .5rem;
     padding: .5rem;
+    height: 100vh;
   }
 
   .all {
@@ -28,8 +29,8 @@ html {
     display: flex;
     flex-wrap: wrap;
     border: 2px solid black;
-    width: 960.1px;
-    height: 960.1px;
+    width: 960px;
+    height: 960px;
     box-sizing: content-box;
   }
 
